--- a/app/globals.css
+++ b/app/globals.css
@@ -12,13 +12,17 @@
 
 @font-face {
   font-family: "Satoshi";
-  src: url("/fonts/satoshi/Satoshi-medium.otf") format("opentype");
+  src: url("/fonts/satoshi/Satoshi-Medium.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
 }
 
 .material-symbols-outlined {
-  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+  font-variation-settings:
+    "FILL" 0,
+    "wght" 400,
+    "GRAD" 0,
+    "opsz" 24;
 }
 .custom-height {
   height: calc(98vh - 6rem);
